<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="liulx.data_center.MainActivity" >
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/tnmg" 
        android:contentDescription="@string/company_name"/>
    <Button
        android:id="@+id/btnInvIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_in" />
    
    <Button
        android:id="@+id/btnInvOut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_out" />



</LinearLayout>